css chenge from amazon into hellomarket

--- a/views/hellomarket.ejs
+++ b/views/hellomarket.ejs
@@ -24,8 +24,8 @@
     <div class="amazon-header">
         <div class="amazon-header-left-section">
             <a href="amazon.html" class="header-link">
-                <img class="amazon-logo" src="/images/Helloo Market logo  in white.png">
-                <img class="amazon-mobile-logo" src="/images/amazon-mobile-logo-white.png">
+                <img class="amazon-logo" src="/images/Helloo Market logo in Green.png">
+                <img class="amazon-mobile-logo" src="/images/Helloo Market logo in Green.png">
             </a>
         </div>
 
@@ -39,12 +39,10 @@
 
         <div class="amazon-header-right-section">
             <a class="orders-link header-link" href="orders.html">
-                <span class="returns-text">Returns</span>
-                <span class="orders-text">& Orders</span>
             </a>
 
             <a class="cart-link header-link" href="http://localhost:6500/chere-market/cheakout">
-                <img class="cart-icon" src="/images/icons/cart-icon.png">
+                <img class="cart-icon" src="/images/images.png">
                 <div class="cart-quantity"></div>
                 <div class="cart-text">Cart</div>
             </a>
