--- a/public/css/shared/hellomarket-header.css
+++ b/public/css/shared/hellomarket-header.css
@@ -1,5 +1,5 @@
 .amazon-header {
-    background-color: darkgreen;
+    background-color: white;
     color: white;
     padding-left: 15px;
     padding-right: 15px;
@@ -10,7 +10,8 @@
     top: 0;
     left: 0;
     right: 0;
-    height: 60px;
+    height: 80px;
+    box-shadow: 0px 4px 5px rgb(0, 0, 0, .3);
 }
 
 .amazon-header-left-section {
@@ -71,7 +72,7 @@
     font-size: 16px;
     height: 38px;
     padding-left: 15px;
-    border: none;
+    border-color: gray;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
     border-top-right-radius: 0;
@@ -79,9 +80,9 @@
 }
 
 .search-button {
-    background-color: rgb(254, 189, 105);
+    background-color: rgb(20, 189, 105);
     border: none;
-    width: 45px;
+    width: 40px;
     height: 40px;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
@@ -102,7 +103,7 @@
 }
 
 .orders-link {
-    color: white;
+    color: black;
 }
 
 .returns-text {
@@ -134,8 +135,10 @@
 }
 
 .cart-quantity {
-    color: rgb(240, 136, 4);
-    font-size: 16px;
+    background-color: rgb(240, 118, 74);
+    border-radius: 100%;
+    color: black;
+    font-size: 20px;
     font-weight: 700;
     position: absolute;
     top: 4px;
