--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -4,261 +4,262 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
+    <title>Products</title>
 </head>
 
 <body>
-    <section id="header">
-        <a href="#"><img src="/images/image/logo.jpeg" alt="" class="logo"></a>
-        <div id="navbar">
-            <li><a class="active" href="app.html">Home</a></li>
-            <li><a href="shop.html">Shop</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
-        </div>
-    </section>
-    <section id="hero">
-        <div id="banner">
-        </div>
-        <div class="hero-buttons">
-            <button class="btn-order"><i class="fa-solid fa-bag-shopping"></i>Order Pickup</button>
-            <button class="btn-order">Order Delivery</button>
-        </div>
-    </section>
-    <section id="feature">
-        <div class="fe-box">
-            <img class="fe-image" src="/images/image/digital.jpeg" alt="">
-            <p>DIGITALING</p>
-        </div>
-        <div class="fe-box">
-            <img class="fe-image" src="/images/image/promotiones.png" alt="">
-            <p>PROMOTION</p>
-        </div>
-        <div class="fe-box">
-            <img class="fe-image" src="/images/image/fetures.png" alt="">
-            <p>EASY</p>
-        </div>
-        <div class="fe-box">
-            <img class="fe-image" src="/images/image/happySell.png" alt="">
-            <p>ONLINE 24/7</p>
-        </div>
-    </section>
-    <section id="products">
-        <div>
-            <h1>Features of Our Market</h1>
-        </div>
-        <div class="product_conatiner">
-            <div class="product">
-                <img class="pro" src="/images/image/products/biryani.jpg" alt="">
-                <div class="btn">
-                    <div class="des">
-                        <div>
-                            <button onclick="price=1981; num=0; addToCart(price,num)" class="add">+</button>
-                            <button>-</button>
-                        </div>
-                        <select>
-                            <option selected value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                            <option value="6">6</option>
-                            <option value="7">7</option>
-                            <option value="8">8</option>
-                            <option value="9">9</option>
-                            <option value="10">10</option>
-                          </select>
-                        <div class="star">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                        <span>GUCCI</span>
-                        <div class="cart"><i class="fas fa-shopping-cart"></i></div>
-                        <p class="value-display0"></p>
-                    </div>
-                </div>
-            </div>
-            <div class="product">
-                <img class="pro" src="/images/image/products/burger.jpg" alt="">
-                <div class="btn">
-                    <div class="des">
-                        <div>
-                            <button onclick="price=2028; num=1; addToCart(price,num)" class="add">+</button>
-                            <button>-</button>
-                        </div>
-                        <select>
-                            <option selected value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                            <option value="6">6</option>
-                            <option value="7">7</option>
-                            <option value="8">8</option>
-                            <option value="9">9</option>
-                            <option value="10">10</option>
-                          </select>
-                        <div class="star">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                        <span>GUCCI</span>
-                        <div class="cart"><i class="fas fa-shopping-cart"></i></div>
-                        <p class="value-display1"></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="product_conatiner">
-            <div class="product">
-                <img class="pro" src="/images/image/products/kimchi.avif" alt="">
-                <div class="btn">
-                    <div class="des">
-                        <div>
-                            <button onclick="price=1674; num=2; addToCart(price,num)" class="add">+</button>
-                            <button>-</button>
-                            <select>
-                            <option selected value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                            <option value="6">6</option>
-                            <option value="7">7</option>
-                            <option value="8">8</option>
-                            <option value="9">9</option>
-                            <option value="10">10</option>
-                          </select>
-                            <div class="star">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                            <span>GUCCI</span>
-                            <div class="cart"><i class="fas fa-shopping-cart"></i></div>
-                            <p class="value-display2"></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="product">
-                    <img class="pro" src="/images/image/products/paella.jpg" alt="">
-                    <div class="btn">
-                        <div class="des">
-                            <div>
-                                <button onclick="price=3575; num=3; addToCart(price,num)" class="add">+</button>
-                                <button>-</button>
-                            </div>
-                            <select>
-                            <option selected value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                            <option value="6">6</option>
-                            <option value="7">7</option>
-                            <option value="8">8</option>
-                            <option value="9">9</option>
-                            <option value="10">10</option>
-                          </select>
-                            <div class="star">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                            <span>GUCCI</span>
-                            <div class="cart"><i class="fas fa-shopping-cart"></i></div>
-                            <p class="value-display3"></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="product_conatiner">
-                <div class="product">
-                    <img class="pro" src="/images/image/products/pizza.avif" alt="">
-                    <div class="btn">
-                        <div class="des">
-                            <div>
-                                <button onclick="price=12000; num=4; addToCart(price,num)" class="add">+</button>
-                                <button>-</button>
-                            </div>
-                            <select>
-                            <option selected value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                            <option value="6">6</option>
-                            <option value="7">7</option>
-                            <option value="8">8</option>
-                            <option value="9">9</option>
-                            <option value="10">10</option>
-                          </select>
-                            <div class="star">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                            <span>GUCCI</span>
-                            <div class="cart"><i class="fas fa-shopping-cart"></i></div>
-                            <p class="value-display4"></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="product">
-                    <img class="pro" src="/images/image/products/shushi.avif" alt="">
-                    <div class="btn">
-                        <div class="des">
-                            <div>
-                                <button onclick="price=2900; num=5; addToCart(price,num)" class="add">+</button>
-                                <button>-</button>
-                            </div>
-                            <select>
-                            <option selected value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                            <option value="6">6</option>
-                            <option value="7">7</option>
-                            <option value="8">8</option>
-                            <option value="9">9</option>
-                            <option value="10">10</option>
-                          </select>
-                            <div class="star">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                            <span>GUCCI</span>
-                            <div class="cart"><i class="fas fa-shopping-cart"></i></div>
-                            <p class="value-display5"></p>
-                        </div>
-                    </div>
-                </div>
-    </section>
-
+    <h1>Products</h1>
+    <ul>
+        <% products.forEach(product => { %>
+            <li>
+                <%= product.name %> -
+                    <%= product.price %>
+            </li>
+            <!-- Assuming Product model has 'name' and 'price' fields -->
+            <% }); %>
+    </ul>
 </body>
-<script src="/js/homePage.js"></script>
 
 </html>
 
-</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="product-container">
+    <div class="product-image-container">
+        <img class="product-rating-stars" src="/images/products/<%=image%>.jpg" alt="">
+    </div>
+
+    <div class="product-name limit-text-to-2-lines">
+        <%=name%>
+    </div>
+
+    <div class="product-rating-container">
+        <img class="product-rating-stars" src="images/ratings/rating-${product.rating.stars*10}.png">
+        <div class="product-rating-count link-primary">
+            <%=image%>
+        </div>
+    </div>
+
+    <div class="product-price">
+        <%=price%>
+    </div>
+
+    <div class="product-quantity-container">
+        <select>
+    <option selected value=${1}>1</option>
+    <option value=${2}>2</option>
+    <option value=${3}>3</option>
+    <option value=${4}>4</option>
+    <option value=${5}>5</option>
+    <option value=${6}>6</option>
+    <option value=${7}>7</option>
+    <option value=${8}>8</option>
+    <option value=${9}>9</option>
+    <option value=${10}>10</option>
+    </select>
+    </div>
+
+    <div class="product-spacer"></div>
+
+    <div class="added-to-cart">
+        <img src="images/icons/checkmark.png"> Added
+    </div>
+
+    <button class="add-to-cart-button button-primary js-add-to-cart" data-product-id="${product.id}">
+    Add to Cart
+    </button>
+</div>
+<div class="product-container">
+    <div class="product-image-container">
+        <img class="product-rating-stars" src="/images/products/<%=image%>.jpg" alt="">
+    </div>
+
+    <div class="product-name limit-text-to-2-lines">
+        <%=name%>
+    </div>
+
+    <div class="product-rating-container">
+        <img class="product-rating-stars" src="images/ratings/rating-${product.rating.stars*10}.png">
+        <div class="product-rating-count link-primary">
+            <%=image%>
+        </div>
+    </div>
+
+    <div class="product-price">
+        <%=price%>
+    </div>
+
+    <div class="product-quantity-container">
+        <select>
+    <option selected value=${1}>1</option>
+    <option value=${2}>2</option>
+    <option value=${3}>3</option>
+    <option value=${4}>4</option>
+    <option value=${5}>5</option>
+    <option value=${6}>6</option>
+    <option value=${7}>7</option>
+    <option value=${8}>8</option>
+    <option value=${9}>9</option>
+    <option value=${10}>10</option>
+    </select>
+    </div>
+
+    <div class="product-spacer"></div>
+
+    <div class="added-to-cart">
+        <img src="images/icons/checkmark.png"> Added
+    </div>
+
+    <button class="add-to-cart-button button-primary js-add-to-cart" data-product-id="${product.id}">
+    Add to Cart
+    </button>
+</div>
+<div class="product-container">
+    <div class="product-image-container">
+        <img class="product-rating-stars" src="/images/products/<%=image%>.jpg" alt="">
+    </div>
+
+    <div class="product-name limit-text-to-2-lines">
+        <%=name%>
+    </div>
+
+    <div class="product-rating-container">
+        <img class="product-rating-stars" src="images/ratings/rating-${product.rating.stars*10}.png">
+        <div class="product-rating-count link-primary">
+            <%=image%>
+        </div>
+    </div>
+
+    <div class="product-price">
+        <%=price%>
+    </div>
+
+    <div class="product-quantity-container">
+        <select>
+    <option selected value=${1}>1</option>
+    <option value=${2}>2</option>
+    <option value=${3}>3</option>
+    <option value=${4}>4</option>
+    <option value=${5}>5</option>
+    <option value=${6}>6</option>
+    <option value=${7}>7</option>
+    <option value=${8}>8</option>
+    <option value=${9}>9</option>
+    <option value=${10}>10</option>
+    </select>
+    </div>
+
+    <div class="product-spacer"></div>
+
+    <div class="added-to-cart">
+        <img src="images/icons/checkmark.png"> Added
+    </div>
+
+    <button class="add-to-cart-button button-primary js-add-to-cart" data-product-id="${product.id}">
+    Add to Cart
+    </button>
+</div>
+<div class="product-container">
+    <div class="product-image-container">
+        <img class="product-rating-stars" src="/images/products/<%=image%>.jpg" alt="">
+    </div>
+
+    <div class="product-name limit-text-to-2-lines">
+        <%=name%>
+    </div>
+
+    <div class="product-rating-container">
+        <img class="product-rating-stars" src="images/ratings/rating-${product.rating.stars*10}.png">
+        <div class="product-rating-count link-primary">
+            <%=image%>
+        </div>
+    </div>
+
+    <div class="product-price">
+        <%=price%>
+    </div>
+
+    <div class="product-quantity-container">
+        <select>
+    <option selected value=${1}>1</option>
+    <option value=${2}>2</option>
+    <option value=${3}>3</option>
+    <option value=${4}>4</option>
+    <option value=${5}>5</option>
+    <option value=${6}>6</option>
+    <option value=${7}>7</option>
+    <option value=${8}>8</option>
+    <option value=${9}>9</option>
+    <option value=${10}>10</option>
+    </select>
+    </div>
+
+    <div class="product-spacer"></div>
+
+    <div class="added-to-cart">
+        <img src="images/icons/checkmark.png"> Added
+    </div>
+
+    <button class="add-to-cart-button button-primary js-add-to-cart" data-product-id="${product.id}">
+    Add to Cart
+    </button>
+</div>
+<div class="product-container">
+    <div class="product-image-container">
+        <img class="product-rating-stars" src="/images/products/<%=image%>.jpg" alt="">
+    </div>
+
+    <div class="product-name limit-text-to-2-lines">
+        <%=name%>
+    </div>
+
+    <div class="product-rating-container">
+        <img class="product-rating-stars" src="images/ratings/rating-${product.rating.stars*10}.png">
+        <div class="product-rating-count link-primary">
+            <%=image%>
+        </div>
+    </div>
+
+    <div class="product-price">
+        <%=price%>
+    </div>
+
+    <div class="product-quantity-container">
+        <select>
+    <option selected value=${1}>1</option>
+    <option value=${2}>2</option>
+    <option value=${3}>3</option>
+    <option value=${4}>4</option>
+    <option value=${5}>5</option>
+    <option value=${6}>6</option>
+    <option value=${7}>7</option>
+    <option value=${8}>8</option>
+    <option value=${9}>9</option>
+    <option value=${10}>10</option>
+    </select>
+    </div>
+
+    <div class="product-spacer"></div>
+
+    <div class="added-to-cart">
+        <img src="images/icons/checkmark.png"> Added
+    </div>
+
+    <button class="add-to-cart-button button-primary js-add-to-cart" data-product-id="${product.id}">
+    Add to Cart
+    </button>
+</div>
