--- a/views/hellomarket.ejs
+++ b/views/hellomarket.ejs
@@ -51,276 +51,52 @@
 
     <div class="main">
         <div class="products-grid js-product-grid">
-            <div class="product-container">
-                <div class="product-image-container">
-                    <img class="product-rating-stars" src="/images/products/<%=image%>.jpg" alt="">
-                </div>
-
-                <div class="product-name limit-text-to-2-lines">
-                    <%=name%>
-                </div>
-
-                <div class="product-rating-container">
-                    <img class="product-rating-stars" src="images/ratings/rating-${product.rating.stars*10}.png">
-                    <div class="product-rating-count link-primary">
-                        <%=image%>
+            <h1>Products</h1>
+            <% products.forEach(product => { %>
+                <div class="product-container">
+                    <div class="product-image-container">
+                        <img class="product-rating-stars" src="/images/products/<%=product.image%>.jpg" alt="">
                     </div>
-                </div>
 
-                <div class="product-price">
-                    <%=price%>
-                </div>
-
-                <div class="product-quantity-container">
-                    <select>
-              <option selected value=${1}>1</option>
-              <option value=${2}>2</option>
-              <option value=${3}>3</option>
-              <option value=${4}>4</option>
-              <option value=${5}>5</option>
-              <option value=${6}>6</option>
-              <option value=${7}>7</option>
-              <option value=${8}>8</option>
-              <option value=${9}>9</option>
-              <option value=${10}>10</option>
-              </select>
-                </div>
-
-                <div class="product-spacer"></div>
-
-                <div class="added-to-cart">
-                    <img src="images/icons/checkmark.png"> Added
-                </div>
-
-                <button class="add-to-cart-button button-primary js-add-to-cart" data-product-id="${product.id}">
-              Add to Cart
-              </button>
-            </div>
-            <div class="product-container">
-                <div class="product-image-container">
-                    <img class="product-rating-stars" src="/images/products/<%=image%>.jpg" alt="">
-                </div>
-
-                <div class="product-name limit-text-to-2-lines">
-                    <%=name%>
-                </div>
-
-                <div class="product-rating-container">
-                    <img class="product-rating-stars" src="images/ratings/rating-${product.rating.stars*10}.png">
-                    <div class="product-rating-count link-primary">
-                        <%=image%>
+                    <div class="product-name limit-text-to-2-lines">
+                        <%= product.name %>
                     </div>
-                </div>
 
-                <div class="product-price">
-                    <%=price%>
-                </div>
-
-                <div class="product-quantity-container">
-                    <select>
-              <option selected value=${1}>1</option>
-              <option value=${2}>2</option>
-              <option value=${3}>3</option>
-              <option value=${4}>4</option>
-              <option value=${5}>5</option>
-              <option value=${6}>6</option>
-              <option value=${7}>7</option>
-              <option value=${8}>8</option>
-              <option value=${9}>9</option>
-              <option value=${10}>10</option>
-              </select>
-                </div>
-
-                <div class="product-spacer"></div>
-
-                <div class="added-to-cart">
-                    <img src="images/icons/checkmark.png"> Added
-                </div>
-
-                <button class="add-to-cart-button button-primary js-add-to-cart" data-product-id="${product.id}">
-              Add to Cart
-              </button>
-            </div>
-            <div class="product-container">
-                <div class="product-image-container">
-                    <img class="product-rating-stars" src="/images/products/<%=image%>.jpg" alt="">
-                </div>
-
-                <div class="product-name limit-text-to-2-lines">
-                    <%=name%>
-                </div>
-
-                <div class="product-rating-container">
-                    <img class="product-rating-stars" src="images/ratings/rating-${product.rating.stars*10}.png">
-                    <div class="product-rating-count link-primary">
-                        <%=image%>
+                    <div class="product-rating-container">
+                        <img class="product-rating-stars" src="/images/ratings/rating-${4.5*10}.png">
+                        <div class="product-rating-count link-primary">
+                        </div>
                     </div>
-                </div>
 
-                <div class="product-price">
-                    <%=price%>
-                </div>
-
-                <div class="product-quantity-container">
-                    <select>
-              <option selected value=${1}>1</option>
-              <option value=${2}>2</option>
-              <option value=${3}>3</option>
-              <option value=${4}>4</option>
-              <option value=${5}>5</option>
-              <option value=${6}>6</option>
-              <option value=${7}>7</option>
-              <option value=${8}>8</option>
-              <option value=${9}>9</option>
-              <option value=${10}>10</option>
-              </select>
-                </div>
-
-                <div class="product-spacer"></div>
-
-                <div class="added-to-cart">
-                    <img src="images/icons/checkmark.png"> Added
-                </div>
-
-                <button class="add-to-cart-button button-primary js-add-to-cart" data-product-id="${product.id}">
-              Add to Cart
-              </button>
-            </div>
-            <div class="product-container">
-                <div class="product-image-container">
-                    <img class="product-rating-stars" src="/images/products/<%=image%>.jpg" alt="">
-                </div>
-
-                <div class="product-name limit-text-to-2-lines">
-                    <%=name%>
-                </div>
-
-                <div class="product-rating-container">
-                    <img class="product-rating-stars" src="images/ratings/rating-${product.rating.stars*10}.png">
-                    <div class="product-rating-count link-primary">
-                        <%=image%>
+                    <div class="product-price">
                     </div>
-                </div>
 
-                <div class="product-price">
-                    <%=price%>
-                </div>
-
-                <div class="product-quantity-container">
-                    <select>
-              <option selected value=${1}>1</option>
-              <option value=${2}>2</option>
-              <option value=${3}>3</option>
-              <option value=${4}>4</option>
-              <option value=${5}>5</option>
-              <option value=${6}>6</option>
-              <option value=${7}>7</option>
-              <option value=${8}>8</option>
-              <option value=${9}>9</option>
-              <option value=${10}>10</option>
-              </select>
-                </div>
-
-                <div class="product-spacer"></div>
-
-                <div class="added-to-cart">
-                    <img src="images/icons/checkmark.png"> Added
-                </div>
-
-                <button class="add-to-cart-button button-primary js-add-to-cart" data-product-id="${product.id}">
-              Add to Cart
-              </button>
-            </div>
-            <div class="product-container">
-                <div class="product-image-container">
-                    <img class="product-rating-stars" src="/images/products/<%=image%>.jpg" alt="">
-                </div>
-
-                <div class="product-name limit-text-to-2-lines">
-                    <%=name%>
-                </div>
-
-                <div class="product-rating-container">
-                    <img class="product-rating-stars" src="images/ratings/rating-${product.rating.stars*10}.png">
-                    <div class="product-rating-count link-primary">
-                        <%=image%>
+                    <div class="product-quantity-container">
+                        <select>
+                    <option selected value=${1}>1</option>
+                    <option value=${2}>2</option>
+                    <option value=${3}>3</option>
+                    <option value=${4}>4</option>
+                    <option value=${5}>5</option>
+                    <option value=${6}>6</option>
+                    <option value=${7}>7</option>
+                    <option value=${8}>8</option>
+                    <option value=${9}>9</option>
+                    <option value=${10}>10</option>
+                    </select>
                     </div>
-                </div>
 
-                <div class="product-price">
-                    <%=price%>
-                </div>
+                    <div class="product-spacer"></div>
 
-                <div class="product-quantity-container">
-                    <select>
-              <option selected value=${1}>1</option>
-              <option value=${2}>2</option>
-              <option value=${3}>3</option>
-              <option value=${4}>4</option>
-              <option value=${5}>5</option>
-              <option value=${6}>6</option>
-              <option value=${7}>7</option>
-              <option value=${8}>8</option>
-              <option value=${9}>9</option>
-              <option value=${10}>10</option>
-              </select>
-                </div>
-
-                <div class="product-spacer"></div>
-
-                <div class="added-to-cart">
-                    <img src="images/icons/checkmark.png"> Added
-                </div>
-
-                <button class="add-to-cart-button button-primary js-add-to-cart" data-product-id="${product.id}">
-              Add to Cart
-              </button>
-            </div>
-            <div class="product-container">
-                <div class="product-image-container">
-                    <img class="product-rating-stars" src="/images/products/<%=image%>.jpg" alt="">
-                </div>
-
-                <div class="product-name limit-text-to-2-lines">
-                    <%=name%>
-                </div>
-
-                <div class="product-rating-container">
-                    <img class="product-rating-stars" src="/images/ratings/rating-${4.5*10}.png">
-                    <div class="product-rating-count link-primary">
-                        <%=image%>
+                    <div class="added-to-cart">
+                        <img src="images/icons/checkmark.png"> Added
                     </div>
+
+                    <button class="add-to-cart-button button-primary js-add-to-cart" data-product-id="${product.id}">
+                    Add to Cart
+                    </button>
                 </div>
-
-                <div class="product-price">
-                    <%=price%>
-                </div>
-
-                <div class="product-quantity-container">
-                    <select>
-              <option selected value=${1}>1</option>
-              <option value=${2}>2</option>
-              <option value=${3}>3</option>
-              <option value=${4}>4</option>
-              <option value=${5}>5</option>
-              <option value=${6}>6</option>
-              <option value=${7}>7</option>
-              <option value=${8}>8</option>
-              <option value=${9}>9</option>
-              <option value=${10}>10</option>
-              </select>
-                </div>
-
-                <div class="product-spacer"></div>
-
-                <div class="added-to-cart">
-                    <img src="images/icons/checkmark.png"> Added
-                </div>
-
-                <button class="add-to-cart-button button-primary js-add-to-cart" data-product-id="${product.id}">
-              Add to Cart
-              </button>
-            </div>
+                <% }); %>
         </div>
 
     </div>
