last day chenges

--- a/views/hellomarket.ejs
+++ b/views/hellomarket.ejs
@@ -63,7 +63,6 @@
                     </div>
 
                     <div class="product-rating-container">
-                        <img class="product-rating-stars" src="/images/ratings/rating-${4.5*10}.png">
                         <div class="product-rating-count link-primary">
                         </div>
                     </div>
@@ -89,10 +88,10 @@
                     <div class="product-spacer"></div>
 
                     <div class="added-to-cart">
-                        <img src="images/icons/checkmark.png"> Added
+
                     </div>
 
-                    <button class="add-to-cart-button button-primary js-add-to-cart" data-product-id="${product.id}">
+                    <button class="add-to-cart-button button-primary js-add-to-cart" data-product-name="<%= product.name %>">
                     Add to Cart
                     </button>
                 </div>
