new order waiting

--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -50,6 +50,7 @@
                 <div class="delivery-options">
                     <div class="delivery-options-title">
                         Choose a delivery option:
+                        <div class="js-delivery-products"></div>
                     </div>
                 </div>
             </div>
@@ -60,7 +61,7 @@
                 </div>
 
                 <div class="payment-summary-row">
-                    <div class="js-items-quantity">Items (3):</div>
+                    <div class="js-items-quantity">:</div>
                     <div class="payment-summary-money js-payment-summary-total"></div>
                 </div>
 
