--- a/views/hellomarket.ejs
+++ b/views/hellomarket.ejs
@@ -58,30 +58,30 @@
                         <img class="product-rating-stars" src="/images/products/<%=product.image%>.jpg" alt="">
                     </div>
 
-                    <div class="product-name limit-text-to-2-lines">
+                    <div class="product-name limit-text-to-2-lines" data-product-name="<%= product.name %>">
                         <%= product.name %>
                     </div>
-
                     <div class="product-rating-container">
                         <div class="product-rating-count link-primary">
                         </div>
                     </div>
 
                     <div class="product-price">
+                        <%= (product.price)/100 %>
                     </div>
 
                     <div class="product-quantity-container">
                         <select>
-                    <option selected value=${1}>1</option>
-                    <option value=${2}>2</option>
-                    <option value=${3}>3</option>
-                    <option value=${4}>4</option>
-                    <option value=${5}>5</option>
-                    <option value=${6}>6</option>
-                    <option value=${7}>7</option>
-                    <option value=${8}>8</option>
-                    <option value=${9}>9</option>
-                    <option value=${10}>10</option>
+                    <option selected value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
                     </select>
                     </div>
 
@@ -91,7 +91,7 @@
 
                     </div>
 
-                    <button class="add-to-cart-button button-primary js-add-to-cart" data-product-name="<%= product.name %>">
+                    <button class="add-to-cart-button button-primary js-add-to-cart" data-product-price="<%= product.price %>" data-product-name="<%= product.name %>" data-product-image="<%= product.image %>" onclick="document.querySelectorAll('.js-add-to-cart').innerText = 'DELETE'">
                     Add to Cart
                     </button>
                 </div>
