--- a/views/order.ejs
+++ b/views/order.ejs
@@ -91,8 +91,10 @@
                             cart
                         })
                     });
+
                     const data = response.json();
                     console.log(data);
+                    window.location.href = 'http://localhost:6500/chere-market/select-bank'
                 } catch (error) {
                     console.error("Error: " + error);
                 }
