--- a/views/tracking.ejs
+++ b/views/tracking.ejs
@@ -61,7 +61,7 @@
 
     <div class="container">
         <h4>
-            description
+            Please press the button after you pay
         </h4>
         <button class="traceNumber">THANK YOU</button>
     </div>
